# iree

compiler/src/iree/compiler/Codegen/Common/: Passes.h
compiler/src/iree/compiler/Codegen/LLVMCPU/: Passes.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/: Passes.cpp
compiler/src/iree/compiler/Dialect/LinalgExt/IR/: AggregatedOpInterfaceImpl.cpp  LinalgExtBase.td  LinalgExtInterfaces.h  LinalgExtOps.cpp  LinalgExtOps.td  TilingInterfaceImpl.cpp
compiler/src/iree/compiler/Dialect/LinalgExt/IR/test/: exp_reduction_attention.mlir  roundtrip.mlir
compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/: CMakeLists.txt  DecomposeExpReduction.cpp  Passes.td
compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/: decompose_exp_reduction.mlir  pipeline_exp_reduction.mlir
hhkit_sandbox_do_not_merge/: notes.md  run.sh  test-codegen-small.mlir  test-codegen.out.mlir  test-matmul.mlir  test-matmul.out.mlir  test.py  test.vmfb
sandbox/: .gitignore  compile.dbg  compile.dbg.mlir  computation.mlir  dispatch-creation.mlir  dispatch.mlir  e2e.mlir  global-optimization.mlir  iree-compile-man  out.mlir  pyproject.toml  run-e2e.py  run.sh  stages.in  test.sh
