[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iree-base-compiler",
    "iree-base-runtime",
    "numpy>=2.3.5",
    "torch>=2.9.1",
]

[tool.uv.sources]
iree-base-compiler = { path = "../build/compiler" }
iree-base-runtime = { path = "../build/runtime" }
